[workspace]
members = ["client"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.5"
byteorder = "1.5"
chrono = "0.4"
directories = "5.0"
enum-map = "2.7"
flate2 = "1.0"
glam = "0.25"
futures-util = { version = "0.3", features = ["sink"] }
home = "0.5"
log = "0.4"
phf = { version = "0.11", features = ["macros"] }
quartz_nbt = "0.2"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "parking_lot",
] }
tokio-util = { version = "0.7", features = ["codec"] }

[workspace.lints.rust]
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"

[workspace.lints.clippy]
pedantic = "warn"
enum_glob_use = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
