[package]
name = "minecrust"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "minecrust"
path = "main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
futures-util = { workspace = true }
home = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
