[package]
name = "world"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
enum-map = { workspace = true }
flate2 = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
quartz_nbt = { workspace = true }
rustc-hash = { workspace = true }
strum = { workspace = true }

world-block = { path = "block" }
world-resource = { path = "resource" }

[lints]
workspace = true
