[package]
name = "world-block"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
enum-map = { workspace = true }
phf = { workspace = true }
quartz_nbt = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

world-block-macros = { path = "macros" }
world-resource = { path = "../resource" }
world-sound = { path = "../sound" }

[lints]
workspace = true
